# podcasts

./: CLAUDE.md  Product_Requirement.md  bug.md  deploy.md  frontend.md
.claude/: settings.local.json
podcast-shorts/: .env  Dockerfile  pyproject.toml
podcast-shorts/output/1de8868e-c290-4cbd-8e10-846e09d011cb/: script.txt
podcast-shorts/output/2fae888c-2b7e-4847-8f47-ad755f24c182/: script.txt
podcast-shorts/output/2fae888c-2b7e-4847-8f47-ad755f24c182/output/: 2fae888c-2b7e-4847-8f47-ad755f24c182_captions.srt
podcast-shorts/output/3183f15e-f5da-4651-a626-01a14a16e56b/: script.txt
podcast-shorts/output/3183f15e-f5da-4651-a626-01a14a16e56b/output/: 3183f15e-f5da-4651-a626-01a14a16e56b_captions.srt
podcast-shorts/output/3a9fa34c-1676-45a1-ae52-f8b2c001ac08/: script.txt
podcast-shorts/output/3a9fa34c-1676-45a1-ae52-f8b2c001ac08/output/: 3a9fa34c-1676-45a1-ae52-f8b2c001ac08_captions.srt
podcast-shorts/output/50cb4570-710f-4902-be56-4b5b6aa7bf0d/: script.txt
podcast-shorts/output/60a79f57-50e6-495b-8da8-7bc70ec30763/: script.txt
podcast-shorts/output/60a79f57-50e6-495b-8da8-7bc70ec30763/output/: 60a79f57-50e6-495b-8da8-7bc70ec30763_captions.srt
podcast-shorts/output/7a97ee3a-62ff-4994-99f6-67ac24dd42eb/: script.txt
podcast-shorts/output/9cee2546-b5a2-4094-995e-57ab14717636/: script.txt
podcast-shorts/output/9cee2546-b5a2-4094-995e-57ab14717636/output/: 9cee2546-b5a2-4094-995e-57ab14717636_captions.srt
podcast-shorts/src/podcast_shorts/: __init__.py  config.py  main.py
podcast-shorts/src/podcast_shorts/api/: dependencies.py  routes.py  schemas.py
(+55 files in other folders)
